Modifico la clase JuegoGinRummi